# cars

./: README.md  render.yaml
backend-test/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  challenge.md  docker-compose.yml  pyproject.toml
backend-test/.github/workflows/: ci.yml
backend-test/alembic/: env.py
backend-test/alembic/versions/: 31b92aee428a_initial_schema.py  6f5e40f0825f_check_combustivel_e_default_.py
backend-test/app/: __init__.py  main.py
backend-test/app/api/: deps.py
backend-test/app/api/v1/: __init__.py  auth.py  carros.py  frontend.py  health.py  marcas.py  modelos.py
backend-test/app/core/: config.py  enums.py  exceptions.py  security.py
backend-test/app/data/: cars.json  cars_by_brand.json
backend-test/app/db/: base.py  seed.py  session.py
backend-test/app/models/: carro.py  marca.py  modelo.py  user.py
backend-test/app/repositories/: base.py  carro.py  marca.py  modelo.py  user.py
backend-test/app/schemas/: auth.py  carro.py  common.py  frontend.py  marca.py  modelo.py
backend-test/app/services/: auth_service.py  carro_service.py  frontend_service.py  marca_service.py  modelo_service.py
backend-test/app/services/ai/: anthropic_provider.py  base.py  prompts.py
backend-test/scripts/: entrypoint.sh  seed.py  wait_for_db.py
backend-test/tests/: conftest.py  test_auth.py  test_carros.py  test_carros_ai.py  test_frontend.py  test_marcas.py  test_modelos.py  test_regressions.py  test_seed.py
frontend-test/: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  (+6 more)
(+88 files in other folders)
