[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cars-backend"
version = "0.1.0"
description = "API REST de catálogo de veículos (Marca/Modelo/Carro) com geração de descrição via Claude."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "anthropic>=0.40",
    "pwdlib[bcrypt]>=0.2",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
    "aiosqlite>=0.20",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]  # migrations geradas

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["B008"]  # FastAPI usa Depends() como default de argumento

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402"]  # imports após a configuração do Alembic

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
